# AI_for_ITS

./: .gitignore  COMMIT_MESSAGE.txt  EVENTBUS_ARCHITECTURE.md  INDEX.md  PPO_IMPLEMENTATION.md  PPO_SUMMARY.md  README.md  README_START_HERE.txt  SIMULATOR_SEPARATION_PLAN.md  SUMO_SEPARATION_CHANGES.md  TRAINING_GUIDE.md  pyproject.toml  verify_setup.py
examples/: eventbus_demo.py
network/PhuQuoc/: phuquoc-demo.rou.xml
network/grid4x4/: grid4x4-demo.rou.xml  grid4x4.conf.xml  grid4x4.sumocfg
network/zurich/: routes.rou.xml  zurich-demo.rou.xml  zurich.conf.xml
scripts/: README_PPO.md  eval_ppo.py  ppo_config_examples.py  run_training.sh  train_ppo.py  train_rllib.py
src/environment/drl_algo/: env.py  event_driven_env.py  observations.py  resco_envs.py  traffic_signal.py
src/sim/: Sumo_sim.py  event_bus.py  event_bus_proxy.py  event_driven_simulator.py
tests/: test.py  test_env.py
