[project]
name = "test-rl-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Sondinh2k3",email = "ledinhsonx1td@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pettingzoo (>=1.25.0,<2.0.0)",
    "traci (>=1.24.0,<2.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "pyvirtualdisplay (>=3.0,<4.0)",
    "supersuit (>=3.10.0,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ray (<=2.9.0)",
    "pandas (>=2.3.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
